--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
-    "pages/history/history"
+    "pages/history/history",
+    "pages/detail/detail"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "酷安日图",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   }
 }
